--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-What's up Corey Reed
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Corey Reed</title>
+    </head>
+    <body>
+        <h1>Corey Reed's CSCE 190 Site</h1>
+
+        <section class="assignment">
+            <img src="Images/problemStatement.png">
+        </section>
+    </body>
+</html>
