--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     </head>
     <body>
         <h1>Corey Reed's CSCE 190 Site</h1>
-
+        <!-- problem statement -->
         <section class="assignment">
-            <a href="files/Problem Statement.pdf"><img src="Images/Screen Shot 2021-09-05 at 2.47.58 PM.png"></a>
+            <a href="files/Problem Statement.pdf"><img src="Images/Problemstatement.png"></a>
             <section class="ass-details">
                 <a href="files/Problem Statement.pdf"><h2>Problem Statement:  Elderly Care</h2></a>
                 <p>
                     People are having problems because of the lack of availability in the adult healthcare space and they feel as if they can not find the proper care for loved ones often settling for a non desirable option. Our solution should allow users access to a database with different adult/senior citizen healthcare providers.
                 </p>
             </section>
+            <!-- affinity diagram -->
+            <section class="assignment">
+                <a href="files/affinitydiagram.pdf"><img src="Images/affinitydiagram.png"></a>
+                <section class="ass-details">
+                    <a href="files/affinitydiagram.pdf"><h2>Affinity Diagram:  Elderly Care</h2></a>
+                    <p>
+                        Our group ,Bold and Brandy, worked together to come up with some great ideas regarding Elderly Care.
+                    </p>
+                </section>
         </section>
     </body>
 </html>
