--- a/index.html
+++ b/index.html
@@ -15,15 +15,26 @@
                     People are having problems because of the lack of availability in the adult healthcare space and they feel as if they can not find the proper care for loved ones often settling for a non desirable option. Our solution should allow users access to a database with different adult/senior citizen healthcare providers.
                 </p>
             </section>
-            <!-- affinity diagram -->
-            <section class="assignment">
-                <a href="files/affinitydiagram.pdf"><img src="Images/affinitydiagram.png"></a>
-                <section class="ass-details">
-                    <a href="files/affinitydiagram.pdf"><h2>Affinity Diagram:  Elderly Care</h2></a>
-                    <p>
-                        Our group, Bold and Brandy, worked together to come up with some great ideas regarding Elderly Care.
-                    </p>
-                </section>
+        </section>
+        <!-- affinity diagram -->
+        <section class="assignment">
+            <a href="files/affinitydiagram.pdf"><img src="Images/affinitydiagram.png"></a>
+            <section class="ass-details">
+                <a href="files/affinitydiagram.pdf"><h2>Affinity Diagram:  Elderly Care</h2></a>
+                <p>
+                    Our group, Bold and Brandy, worked together to come up with some great ideas regarding Elderly Care.
+                </p>
+            </section>
+        </section>
+        <!-- Personas Assignment  -->
+        <section class="assignment">
+            <a href="files/Personas.pdf"><img src="Images/Personas.png"></a>
+            <section class="ass-details">
+                <a href="files/Personas.pdf"><h2>Personas:  3 Personas for Elderly Care</h2></a>
+                <p>
+                    Personas of typical elderly care app users.
+                </p>
+            </section>
         </section>
     </body>
 </html>
