--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </section>
         <!-- Personas Assignment  -->
         <section class="assignment">
-            <a href="files/Personas.pdf"><img src="Images/Personas.png"></a>
+            <a href="files/Personas1-combined.pdf"><img src="Images/Personas.png"></a>
             <section class="ass-details">
-                <a href="files/Personas.pdf"><h2>Personas:  3 Personas for Elderly Care</h2></a>
+                <a href="files/Personas1-combined.pdf"><h2>Personas:  4 Personas for Elderly Care</h2></a>
                 <p>
                     Personas of typical elderly care app users.
                 </p>
