--- a/index.html
+++ b/index.html
@@ -40,9 +40,19 @@
         <section class="assignment">
             <a href="files/combinepdf.pdf"><img src="Images/Storyboard ss.png"></a>
             <section class="ass-details">
-                <a href="files/combinepdf.pdf"><h2>Personas:  3 Storyboards for Elderly Care Customers</h2></a>
+                <a href="files/combinepdf.pdf"><h2>Storyboards:  3 Storyboards for Elderly Care Customers</h2></a>
                 <p>
                     Examples of The Adult Care App uses.
+                </p>
+            </section>
+        </section>
+        <!-- Sketches Assignment  -->
+        <section class="assignment">
+            <a href="files/Sketches Bold and Brandy .pdf"><img src="Images/SketchesPicture.png"></a>
+            <section class="ass-details">
+                <a href="files/Sketches Bold and Brandy .pdf"><h2>Sketches: 4 Sketches of the Adult Heath Care App</h2></a>
+                <p>
+                    Rough Sketches of The Adult Care App.
                 </p>
             </section>
         </section>
