--- a/index.html
+++ b/index.html
@@ -79,13 +79,26 @@
             <!-- Prototype Assignment  -->
             <section class="assignment">
                 <a href="https://www.youtube.com/watch?v=R-hKDKYUw58">
-                    <h2>Paper Prototype</h2>
+                    <h2>Paper Prototype Display: Adult Healthcare App</h2>
                 </a>
                 <a href="https://www.youtube.com/watch?v=R-hKDKYUw58">
                     <img src="Images/Paper Protoype.png">
                 </a>
                 <p>
                     A paper walkthrough of every potential screen in the application.
+                </p>
+            </section>
+
+             <!-- High-Fi Prototype Assignment  -->
+             <section class="assignment">
+                <a href="files/High-Fi Prototype/src/index.html">
+                    <h2>High-Fi Protoype: Adult Healthcare app</h2>
+                </a>
+                <a href="files/High-Fi Prototype/src/index.html">
+                    <img src="Images/High-Fi Prototype.png">
+                </a>
+                <p>
+                    A scenario and tasks of the Adult Healthcare app.
                 </p>
             </section>
         </div>
