--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <div class = "assignments">
             <!-- problem statement -->
             <section class="assignment">
-                <a href="files/Problem Statement.pdf">
+                <a href="Images/IMG_0747.jpeg">
                     <h2>Bryson</h2>
                 </a>
-                <a href="files/Problem Statement.pdf">
+                <a href="Images/IMG_0747.jpeg">
                     <img src="Images/IMG_0747.jpeg">
                 </a>
                 <p>
@@ -22,12 +22,12 @@
             </section>
             <!-- affinity diagram -->
             <section class="assignment">
-                <a href = "files/affinitydiagram.pdf">
+                <a href = "Images/IMG_0747.jpeg">
                     <h2>
                         Bryson
                     </h2>
                 </a>
-                <a href="files/affinitydiagram.pdf">
+                <a href="Images/IMG_0747.jpeg">
                     <img src="Images/IMG_0747.jpeg">
                 </a>
                 
@@ -39,12 +39,12 @@
             </section>
             <!-- Personas Assignment  -->
             <section class="assignment">
-                <a href="files/Personas1-combined.pdf">
+                <a href="Images/IMG_0747.jpeg">
                     <h2>
                         Bryson
                     </h2>
                 </a>
-                <a href="files/Personas1-combined.pdf">
+                <a href="Images/IMG_0747.jpeg">
                     <img src="Images/IMG_0747.jpeg">
                 </a>
                 <p>
@@ -54,12 +54,12 @@
             </section>
             <!-- Storyboard Assignment  -->
             <section class="assignment">
-                <a href="files/combinepdf.pdf">
+                <a href="Images/IMG_0747.jpeg">
                     <h2>
                         Bryson
                     </h2>
                 </a>
-                <a href="files/combinepdf.pdf">
+                <a href="Images/IMG_0747.jpeg">
                     <img src="Images/IMG_0747.jpeg">
                 </a>
                 <p>
@@ -68,10 +68,10 @@
             </section>
             <!-- Sketches Assignment  -->
             <section class="assignment">
-                <a href="files/Sketches Bold and Brandy .pdf">
+                <a href="Images/IMG_0747.jpeg">
                     <h2>Bryson</h2>
                 </a>
-                <a href="files/Sketches Bold and Brandy .pdf">
+                <a href="Images/IMG_0747.jpeg">
                     <img src="Images/IMG_0747.jpeg">
                 </a>
                 <p>
