--- a/CSCE 190/index.html
+++ b/CSCE 190/index.html
@@ -14,7 +14,7 @@
                     <h2>Schedule</h2>
                 </a>
                 <a href="Images/Screenshot.png">
-                    <img src="Images/ResizedSS.jpeg">
+                    <img src="Images/Screenshot.png">
                 </a>
                 <p>
                     TNL Regular Season Schedule
